center infos update

--- a/vaccination-app/src/app/create-vaccination-center/create-vaccination-center.component.html
+++ b/vaccination-app/src/app/create-vaccination-center/create-vaccination-center.component.html
@@ -23,8 +23,7 @@
         </div>
     </div>
     <div class="buttons">
-        <button id="usersicon"> <fa-icon [icon]="usersIcon"></fa-icon> </button>
-        <div class="cancelupdate">
+        <div class="cancelcreate">
             <button routerLink="../sadmincenters"> Annuler </button>
             <button (click)="createCenter()"> Valider </button>
         </div>
