--- a/vaccination-app/src/app/update-doctor/update-doctor.component.html
+++ b/vaccination-app/src/app/update-doctor/update-doctor.component.html
@@ -30,7 +30,7 @@
             </select>
         </div>
         <div class="buttons">
-            <button routerLink="../../../centeradminsdoctors/{{center.id}}"> Annuler </button>
+            <button (click)="cancelDoctorUpdate()"> Annuler </button>
             <button (click)="updateDoctor()"> Valider </button>
         </div>
 
